# projetental

./: .gitignore  README.md  pyproject.toml
results/: semisup_all_clustering_results.csv  supervised_results.csv  unsup_estimated.csv  unsup_oracle.csv
src/projetental/: cli.py  data_processing.py  embeddings.py  metrics.py  semi-supervised_experiments.py  semi_supervised.py  supervised.py  supervised_experiments.py  unsupervised.py  unsupervised_experiment.py
