[project]
name = "projetental"
version = "0.1.0"
description = ""
authors = [
    {name = "Nils P. Kujath",email = "63961429+NilsKujath@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "numpy (>=2.3.0,<3.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "transformers (>=4.52.4,<5.0.0)",
    "torch (>=2.7.1,<3.0.0)",
    "bcubed (>=1.5,<2.0)",
    "scipy (>=1.11.0,<2.0.0)"
]

[project.scripts]
projetental = "projetental.cli:main"

[tool.poetry]
packages = [{include = "projetental", from = "src"}]


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
